@@ -10,6 +10,8 @@ Version 1.0
   * Io
   * Smalltalk
 
+- Handle format specifications in the Perl lexer.
+
 - Add more file name extensions for the C++, INI and XML lexers.
 
 - Fixes in the IRC and MuPad lexers.
